test/cases/compile_errors/saturating_shl_does_not_allow_negative_rhs_at_comptime.zig
export fn a() void {
    _ = @as(i32, 1) <<| @as(i32, -2);
}

// error
// backend=stage2
// target=native
//
// :2:25: error: shift by negative amount '-2'
